Changed class paths to CDH4.3 to support the Cloudera Quickstart VM.  Fixed the hql to join properly.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,85 @@
 /hadoop.log
 /bin
 /hadoop.log.2013-01-08
+TempStatsStore/log/log.ctrl
+TempStatsStore/log/log1.dat
+TempStatsStore/log/logmirror.ctrl
+TempStatsStore/seg0/c10.dat
+TempStatsStore/seg0/c101.dat
+TempStatsStore/seg0/c111.dat
+TempStatsStore/seg0/c121.dat
+TempStatsStore/seg0/c130.dat
+TempStatsStore/seg0/c141.dat
+TempStatsStore/seg0/c150.dat
+TempStatsStore/seg0/c161.dat
+TempStatsStore/seg0/c171.dat
+TempStatsStore/seg0/c180.dat
+TempStatsStore/seg0/c191.dat
+TempStatsStore/seg0/c1a1.dat
+TempStatsStore/seg0/c1b1.dat
+TempStatsStore/seg0/c1c0.dat
+TempStatsStore/seg0/c1d1.dat
+TempStatsStore/seg0/c1e0.dat
+TempStatsStore/seg0/c1f1.dat
+TempStatsStore/seg0/c20.dat
+TempStatsStore/seg0/c200.dat
+TempStatsStore/seg0/c211.dat
+TempStatsStore/seg0/c221.dat
+TempStatsStore/seg0/c230.dat
+TempStatsStore/seg0/c241.dat
+TempStatsStore/seg0/c251.dat
+TempStatsStore/seg0/c260.dat
+TempStatsStore/seg0/c271.dat
+TempStatsStore/seg0/c281.dat
+TempStatsStore/seg0/c290.dat
+TempStatsStore/seg0/c2a1.dat
+TempStatsStore/seg0/c2b1.dat
+TempStatsStore/seg0/c2c1.dat
+TempStatsStore/seg0/c2d0.dat
+TempStatsStore/seg0/c2e1.dat
+TempStatsStore/seg0/c2f0.dat
+TempStatsStore/seg0/c300.dat
+TempStatsStore/seg0/c31.dat
+TempStatsStore/seg0/c311.dat
+TempStatsStore/seg0/c321.dat
+TempStatsStore/seg0/c331.dat
+TempStatsStore/seg0/c340.dat
+TempStatsStore/seg0/c351.dat
+TempStatsStore/seg0/c361.dat
+TempStatsStore/seg0/c371.dat
+TempStatsStore/seg0/c380.dat
+TempStatsStore/seg0/c391.dat
+TempStatsStore/seg0/c3a1.dat
+TempStatsStore/seg0/c3b1.dat
+TempStatsStore/seg0/c3c0.dat
+TempStatsStore/seg0/c3d1.dat
+TempStatsStore/seg0/c3e1.dat
+TempStatsStore/seg0/c3f1.dat
+TempStatsStore/seg0/c400.dat
+TempStatsStore/seg0/c41.dat
+TempStatsStore/seg0/c411.dat
+TempStatsStore/seg0/c51.dat
+TempStatsStore/seg0/c60.dat
+TempStatsStore/seg0/c71.dat
+TempStatsStore/seg0/c81.dat
+TempStatsStore/seg0/c90.dat
+TempStatsStore/seg0/ca1.dat
+TempStatsStore/seg0/cb1.dat
+TempStatsStore/seg0/cc0.dat
+TempStatsStore/seg0/cd1.dat
+TempStatsStore/seg0/ce1.dat
+TempStatsStore/seg0/cf0.dat
+TempStatsStore/service.properties
+derby.log
+joinedoutput/._SUCCESS.crc
+joinedoutput/.part-m-00000.crc
+joinedoutput/.part-m-00001.crc
+joinedoutput/.part-m-00002.crc
+joinedoutput/_SUCCESS
+joinedoutput/part-m-00000
+joinedoutput/part-m-00001
+joinedoutput/part-m-00002
+playoutput/._SUCCESS.crc
+playoutput/.part-r-00000.crc
+playoutput/_SUCCESS
+playoutput/part-r-00000
