Added more to note.

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,11 @@ playoutput/._SUCCESS.crc
 playoutput/.part-r-00000.crc
 playoutput/_SUCCESS
 playoutput/part-r-00000
+hadoop.log.2013-07-10
+hadoop.log.2013-07-11
+hadoop.log.2013-07-12
+hadoop.log.2013-07-13
+hadoop.log.2013-07-14
+hadoop.log.2013-07-15
+output.txt
+output_bu.txt
