Added test of Java 8 Lambdas for Spark 1.3.

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ src/PassWritable.class
 playbyplay.jar
 src/PlayByPlayDriver.class
 src/PlayByPlayMapper.class
+.DS_Store
+spark/.DS_Store
+spark/.idea
+spark/target
+spark/.settings
+nflspark.iml
